Style : add classes into the card elements css

--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,19 @@ h1 {
     height: 200px;
     width: 200px;
 }
+
+.name_card {
+
+}
+
+.location_card{
+
+}
+
+.phrase_card{
+
+}
+
+.cost_card {
+    
+}
