--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,9 @@ h1 {
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.25);
 }
 
 .name_card {
