--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@ h1 {
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
+    font-weight: lighter;
+    margin: 15px 0px;
 }
 
 .photographer_section article img {
@@ -50,10 +52,6 @@ h1 {
     border-radius: 50%;
     object-fit: cover;
     box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.25);
-}
-
-.name_card {
-
 }
 
 .location_card{
