--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,10 @@ h1 {
     margin: 0px;
 }
 
-.phrase_card{
-
+.phrase_card {
+    color: #000;
+    font-size: 10px;
+    margin: 0px;
 }
 
 .cost_card {
