--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ h1 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
-    margin-top: 100px;
+    margin: 100px 0;
 }
 
 .photographer_section article {
@@ -67,5 +67,7 @@ h1 {
 }
 
 .cost_card {
-    
+    color: #757575;
+    font-size: 9px;
+    margin: 2px;
 }
