--- a/css/photographer.css
+++ b/css/photographer.css
@@ -83,4 +83,10 @@ form input {
     align-items: center;
 }
 
-
+.photographer-image img {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
+}
