--- a/css/photographer.css
+++ b/css/photographer.css
@@ -90,3 +90,17 @@ form input {
     object-fit: cover;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
 }
+
+.photographer-information article h2 {
+    color: #D3573C;
+    font-size: 40px;
+    font-weight: lighter;
+    margin: 15px 0px;
+}
+
+.location_photographer {
+    color: #901C1C;
+    font-size: 18px;
+    font-weight: lighter;
+    margin: 10px 0px;
+}
