Style : photograph phrase style

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -104,3 +104,10 @@ form input {
     font-weight: lighter;
     margin: 10px 0px;
 }
+
+.phrase_photographer {
+    color: #525252;
+    font-size: 16px;
+    font-weight: lighter;
+    margin: 15px 0px;
+}
